# dog_urdf

./: CMakeLists.txt  package.xml  tmp_fix_hip_axes.py  tmp_migrate_urdf.py
config/: rs01_motor_limits.yaml
launch/: display.launch  gazebo.launch
meshes/: FL_calf_joint.STL  FL_hip_joint.STL  FL_thigh_joint.STL  FR_calf_joint.STL  FR_hip_joint.STL  FR_thigh_joint.STL  RL_calf_joint.STL  RL_hip_joint.STL  RL_thigh_joint.STL  RR_calf_joint.STL  RR_hip_joint.STL  RR_thigh_joint.STL  Trunk.STL  imu_Link.STL
urdf/: URDFzhuangpei.SLDASM.csv  URDFzhuangpei.SLDASM.urdf  URDFzhuangpei.SLDASM.urdf.bak_before_migrate
