<?xml version="1.0"?>
<package format="2">
  <name>URDFzhuangpei.SLDASM</name>
  <version>1.0.0</version>
  <description>
    <p>URDF, collision meshes, and launch files for the custom quadruped robot.</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
